# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: my-test.yml  pyci.yml
gendiff/: __init__.py  cli.py  formate_files.py  formater.py  formatter.py  generate_diff.py  internal_representation_diff.py  internal_representation_tree.py  parser_files.py  stylish.py
gendiff/formatters/: format_value_module.py  formater.py  json.py  json_module.py  plain.py  plain_module.py  stylish.py  stylish_module.py
gendiff/scripts/: gendiff.py  gendiff_comm_line_script.py  gendiff_help.py
tests/: test_cli.py  test_formate_files.py  test_formatters.py  test_generate_diff.py  test_generate_diff_to_json.py  test_interal_representation_tree.py  test_parser_files.py
tests/fixtures/: file1.yaml  file1_nested.yaml  file1_test_generate_diff_trees.py  file2.yaml  file2_2.json  file2_nested.yaml  file2_test_generate_diff_trees.py  file_for_gen_tree.json  result_flat_yaml_files  result_generate_diff_trees.py  result_get_diff_data_trees.json  result_make_inner.json  result_nested_files_yaml  result_stylish  result_to_json_flat.txt  result_to_json_nested.txt  result_yaml_flat_plain  result_yaml_nested_plain
