[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alexandr Sakhatov <sakhatoff@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_comm_line_script:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
